# ag

./: .gitignore  Makefile  README.md  agentm.example.toml  buf.gen.yaml  buf.yaml  decisions.md  go.mod  go.sum
agent/: agent.go  agent_test.go
docs/: architecture.md  claude-code-compatibility.md  cli.md  gateway.md  pluggable-sdk.md  registry.md  replica-lab.md  replica-progress.md
examples/python-plugin/: README.md  plugin.py  pyproject.toml  run-local.sh
gateway/: conversation.go  conversation_test.go  event.go  event_store_file.go  event_store_gorm.go  event_store_memory.go  event_store_test.go  http.go  http_error_test.go  http_test.go  input.go  input_store_file.go  input_store_gorm.go  input_store_memory.go  input_store_test.go  input_supervisor.go  input_supervisor_test.go  inspection.go  inspection_test.go  interaction.go  interaction_manager.go  interaction_store_file.go  interaction_store_gorm.go  interaction_store_memory.go  interaction_store_test.go  interaction_tool.go  interaction_tool_test.go  permission_plugin.go  plugins.go  plugins_test.go  restart_recovery_test.go  runtime_backend.go  runtime_backend_test.go  runtime_host_slot.go  runtime_host_slot_test.go  service.go  session.go  session_gate.go  session_gate_test.go  session_test.go  (+9 more)
gatewayrpc/: server.go  server_test.go
integration/: main_test.go  python_plugin_test.go  standalone_plugins_test.go
pluginrpc/: client.go  client_config_test.go  convert.go  convert_test.go  e2e_test.go  registry.go  registry_e2e_test.go  server.go  server_config_test.go  server_delivery.go  transport.go  (+3 more)
(+552 files in other folders)
