[project]
name = "agentm-python-plugin-example"
version = "0.1.0"
description = "SDK-independent Python implementation of the AgentM plugin wire protocol"
requires-python = ">=3.11"
dependencies = [
    "grpcio==1.82.1",
    "grpcio-tools==1.82.1",
    "protobuf==7.35.1",
]

[tool.uv]
package = false
